# harris_detector_parallel_cuda_implementation

./: CMakeLists.txt  README.md  corners.txt  output.txt
include/: gradient.h  harris.h  harris_parallel.h
src/: CMakeLists.txt  autocorrelation_gpu.cu  autocorrelation_gpu.cuh  gaussian.cpp  gradient.cpp  gradient_gpu.cu  gradient_gpu.cuh  harris.cpp  harris_parallel.cpp  parallel.cpp  parallel_computation.cu  parallel_computation.cuh  sequential.cpp  sequential_2.cpp  zoom.cpp
